画像の追加と文字修正

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p class="fade-in-delay">お見送りとお出迎えをしてくれるロボット<br>picapon</p>
         </div>
         <div class="hero-image-placeholder">
-            <img src="images/hero_placeholder.jpg" alt="ぴかぽんメイン画像" class="hero-img">
+            <img src="images/mainimage.png" alt="ぴかぽんメイン画像" class="hero-img">
         </div>
     </section>
 
