--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1 class="fade-in">一人暮らしでも、<br>「行ってきます」「ただいま」を<br>言う暮らしを。</h1>
-            <p class="fade-in-delay">お見送りとお出迎えをしてくれるロボット<br>picapon</p>
+            <p class="fade-in-delay">お見送りとお出迎えをしてくれるロボット<br><img src="images/logo.png" alt="picapon" class="hero-logo"></p>
         </div>
         <div class="hero-image-placeholder">
             <img src="images/mainimage.png" alt="ぴかぽんメイン画像" class="hero-img">
