--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <section class="hero">
         <div class="hero-content">
             <h1 class="fade-in">一人暮らしでも、<br>「行ってきます」「ただいま」を<br>言う暮らしを。</h1>
-            <p class="fade-in-delay">お見送りとお出迎えをしてくれるロボット<br><img src="images/logo.png" alt="picapon" class="hero-logo"></p>
+            <p class="fade-in-delay sub-text">お見送りとお出迎えをしてくれるロボット</p>
+            <div class="fade-in-delay">
+                <img src="images/logo.png" alt="picapon" class="hero-logo">
+            </div>
         </div>
         <div class="hero-image-placeholder">
             <img src="images/mainimage.png" alt="ぴかぽんメイン画像" class="hero-img">
@@ -36,15 +39,23 @@
     <section id="concept" class="section-concept">
         <div class="container">
             <h2>ぴかぽんって？</h2>
-            <p class="lead-text">
-                ぴかぽんは、別の星からやってきた！<br>
-                人間の「さみしさ」が生まれる場所に現れます。<br>
-                地球では、玄関がその場所でした。
-            </p>
-            <p>
-                ぴかぽんは、自ら話しかけはしません。<br>
-                ただ、玄関であなたの生活を見守ります。
-            </p>
+            <div class="concept-layout">
+                <div class="concept-text">
+                    <p class="lead-text">
+                        ぴかぽんは、別の星からやってきた！
+                        人間の「さみしさ」が生まれる場所に現れます。
+                        地球では、玄関がその場所でした。
+                    </p>
+                    <p>
+                        ぴかぽんは、自ら話しかけはしません。
+                        ただ、玄関であなたの生活を見守ります。
+                    </p>
+                </div>
+                <div class="concept-image">
+                    <img src="images/insekipon.png" alt="隕石" class="img-origin">
+                    <img src="images/insekipon1.png" alt="ぴかぽん" class="img-flying">
+                </div>
+            </div>
         </div>
     </section>
 
