使用イメージ追加

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <div class="concept-layout">
                 <div class="concept-text">
                     <p class="lead-text">
-                        ぴかぽんは、別の星からやってきた！人間の「さみしさ」が生まれる場所に現れます。<br>
+                        ぴかぽんは、別の星からやってきた！<br>
+                        人間の「さみしさ」が生まれる場所に現れます。<br>
                         地球では、玄関がその場所でした。
                     </p>
                     <p>
@@ -116,6 +117,9 @@
     <section id="howtouse" class="section-howtouse">
         <div class="container">
             <h2>つかいかた</h2>
+            <div class="usage-image-container">
+                <img src="images/siyouimage.png" alt="使用イメージ" class="usage-img">
+            </div>
             <div class="steps">
                 <div class="step">
                     <h3>01. 設置</h3>
@@ -126,15 +130,13 @@
                     <div class="interaction-demo">
                         <div class="demo-box">
                             <span class="user-voice">「行ってきます」</span>
-                            <span class="arrow">→</span>
                             <span class="robot-response">短い鳴き声＋うつむく</span>
-                            <p class="note">朝は忙しいため、寂しそうに見送ります。</p>
+                            <p class="note">朝は忙しいため、<br>寂しそうに見送ります。</p>
                         </div>
                         <div class="demo-box">
                             <span class="user-voice">「ただいま」</span>
-                            <span class="arrow">→</span>
                             <span class="robot-response">長めの鳴き声＋全身で喜び</span>
-                            <p class="note">あなたの帰宅を光とうなずきで喜びます。</p>
+                            <p class="note">あなたの帰宅を<br>光とうなずきで喜びます。</p>
                         </div>
                     </div>
                 </div>
