--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#research">Research</a></li>
                 <li><a href="#howtouse">How to use</a></li>
+                <li><a href="#faq">Q&A</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
