--- a/index.html
+++ b/index.html
@@ -230,6 +230,21 @@
         </div>
     </section>
 
+    <section id="theme-song" class="section-theme-song">
+        <div class="container">
+            <h2>ぴかぽん公式ソング</h2>
+            <div class="song-container">
+                <p class="song-description">ぴかぽんとの暮らしをイメージした、心温まる公式テーマソングです。<br>ぜひ聴いてみてください。</p>
+                <div class="audio-player-wrapper">
+                    <audio controls controlsList="nodownload">
+                        <source src="music/picapon_song.mp3" type="audio/mpeg">
+                        お使いのブラウザはaudio要素をサポートしていません。
+                    </audio>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="contact" class="section-contact">
         <div class="container">
             <h2>お問い合わせ</h2>
