--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         <p>
                             ぴかぽん　ぴかぽん　ただいまソング<br>
                             しっぽみたいに　からだが　ぴょん<br>
-                            「いってきます」に　ぽんって　おへんじ<br>
+                            「いってきます」に　ぴって　おへんじ<br>
                             ドアがあくたび　きみとスタート<br>
                             ぴかぽん　ぴかぽん　おかえりダンス<br>
                             ちいさなこえで　おつかれさま<br>
@@ -281,7 +281,7 @@
                         <p>
                             ぴかぽん　ぴかぽん　ただいまソング<br>
                             しっぽみたいに　からだが　ぴょん<br>
-                            「いってきます」に　ぽよんって　おへんじ<br>
+                            「いってきます」に　ぴって　おへんじ<br>
                             ドアがあくたび　きみとスタート<br>
                             ぴかぽん　ぴかぽん　おかえりダンス<br>
                             ちいさなこえで　おつかれさま<br>
