--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                             お使いのブラウザはvideo要素をサポートしていません。
                         </video>
                     </div>
-                    <!-- スマホを持つ親指 -->
-                    <div class="hand-thumb"></div>
+                    <!-- 左手（親指） -->
+                    <div class="hand-left"></div>
                 </div>
             </div>
         </div>
